--- a/p3/src/main.css
+++ b/p3/src/main.css
@@ -23,17 +23,16 @@ h1 {
 #container {
   margin: auto;
   width: 1000px;
-  height: 500px;
+  height: 600px;
   display: grid;
   grid-template-rows: auto auto auto;
+  grid-row-gap: 5px;
   grid-template-columns: auto auto auto auto;
-  border-bottom: 1px solid black;
-  border-right: 1px solid black;
+  grid-column-gap: 5px;
 }
 
 .card {
-  border-top: 1px solid black;
-  border-left: 1px solid black;
+  border: 2px solid black;
   display: flex;
   justify-content: center;
   align-items: center;
