--- a/p3/src/main.css
+++ b/p3/src/main.css
@@ -17,18 +17,18 @@
   --total-width: calc(var(--card-width) * 4 + var(--gutter) * 3);
 }
 
+html, body, #container {
+  width: 100%;
+  height: 100%;
+}
+
 body {
   font-family: 'Source Sans Pro', 'Trebuchet MS', 'Lucida Grande', 'Bitstream Vera Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
-  text-align: center;
   background-color: #293c4b;
 }
 
-h1 {
-  font-size: 30px;
-}
-
-#container {
+#table {
   margin: auto;
   width: var(--total-width);
   height: var(--total-height);
@@ -49,6 +49,6 @@ h1 {
   background-color: white;
 }
 
-.card.staged {
+.card.set {
   box-shadow: inset 0px 0px 0px 5px black;
 }
